Fix horizontal scroll bar appearing in the tutorial. Disabling the case of the grid when the vocal synthesis is being played

--- a/src/app/components/dialog-help/dialog-help.component.css
+++ b/src/app/components/dialog-help/dialog-help.component.css
@@ -16,3 +16,7 @@ img {
   display: flex;
   flex-direction: column;
 }
+
+.mat-dialog-content{
+  overflow-x: hidden;
+}
